<resources>
    <string name="app_name">Black magic recipe</string>
    <string name="brew_your_coffee_label">Brew your coffee</string>
    <string name="start_timer">Start timer</string>
    <string name="evaluate_your_cup">Evaluate your cup</string>
    <string name="save_black_magic">Save black magic</string>

    <string-array name="brew_methods_array">
        <item>Espresso Machine</item>
        <item>V60</item>
        <item>Mocha Pot</item>
        <item>Cup</item>
        <item>Aeropress</item>
        <item>Chemex</item>
        <item>French Press</item>
    </string-array>

    <string-array name="coffee_labels_array">
        <item>TastyCoffee</item>
        <item>SilkyDrum</item>
        <item>Verle</item>
        <item>Sibaristica</item>
        <item>Delonghi</item>
        <item>Millor</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acidity">Acidity</string>
    <string name="body">Body</string>
    <string name="sweetness">Sweetness</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="stop_timer">Stop timer</string>
    <string name="reset_and_start">Reset and start</string>
    <string name="download_error">Download error</string>
    <string name="begin_typing_coffee_name">Begin typing coffee name</string>
    <string name="non_selected">Non selected</string>
    <string name="recipes">Recipes</string>
    <string name="brewing">Brewing</string>
    <string name="products_updating_failed">Products updating failed. Check Internet connection</string>
    <string name="products_updated">Products updated</string>

</resources>